--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,6 @@
   height: fit-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,15 +14,19 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.banner {
+  margin: 0;
+  height: 200px;
+  background-color: #FBE7FF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 3em;
+  color: black;
+  user-select: none;
+  font-weight: 500;
 }
