--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 .header{
     background-color: #41024E;
-    height: 80px;
+    height: 60px;
     display: flex;
     align-items: center; 
 }
@@ -14,7 +14,7 @@
 
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: xxx-large;
+    font-size: xx-large;
     margin: 0px;
     margin-left: 10px;
     color: white;
@@ -22,6 +22,6 @@ h1{
 }
 
 .logo{
-    height: 50px;
+    height: 40px;
     margin: 20px;  
 }
