--- a/src/Register.css
+++ b/src/Register.css
@@ -1,7 +1,25 @@
-.banner {
+.banner2 {
     margin: 0;
-    height: 200px;
+    height: 100px;
     background-color: #FBE7FF;
+
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+  }
+
+  .Register {
+    background-color: rgb(245, 245, 245);
+  }
+
+  .form {
+    margin: 0;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 2.5%;
+    height: 700px;
+    background-color: #ffffff;
+    filter: drop-shadow(0px 5px 4px #979797);
   }
   
   h2{
@@ -13,4 +31,16 @@
     color: black;
     user-select: none;
     font-weight: 500;
+  }
+
+  h3{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    color: black;
+    user-select: none;
+    font-weight: 100;
+    text-align: center;
   }
