--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,6 +3,10 @@
     height: 60px;
     display: flex;
     align-items: center; 
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1; /*z-index sets the header above other elements*/
 }
 
 .titleBox{
