--- a/src/Register.css
+++ b/src/Register.css
@@ -9,28 +9,44 @@
   }
 
   .Register {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(253, 253, 253);
+    padding-bottom: 5%;
   }
 
   .form {
     margin-left: 15%;
     margin-right: 15%;
     margin-top: 2.5%;
-    height: 700px;
+    
+    height: 620px;
     background-color: #ffffff;
     filter: drop-shadow(0px 5px 4px #979797);
 
     display: flex;
     flex-direction: column;
     align-items: center; 
-    
-
   }
   .row {
     display: flex;
+    width: 81%;
+    justify-content: space-between;
+    
   }
-  .column {
-    flex: 50%;
+
+  .short {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    width: 47%;
+    height: 50px;
+    margin-bottom: 30px;
+  }
+
+  .long {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    width: 80%;
+    height: 50px;
+    margin-bottom: 30px;
   }
   
   h2{
