--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    
+    height: 800px;
   }
   
   .Home-header {
@@ -26,11 +26,24 @@
     margin-bottom: 30px;
   }
   
-  .banner {
+  .dashbanner {
     margin-top: 60px;
-    height: 200px;
-    background-color: #FBE7FF;
+    height: 100px;
+    background-color: #eeeeee;
     width: 100%;
+  }
+
+  .row {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  .sidebar {
+    background-color: #c7c7c7;
+    height: 100%;
+    width: 15%;
   }
   
   h2{
