--- a/src/Register.module.css
+++ b/src/Register.module.css
@@ -39,6 +39,7 @@
     width: 47%;
     height: 50px;
     margin-bottom: 30px;
+    text-indent: 30px;
   }
 
   .long {
@@ -47,6 +48,7 @@
     width: 80%;
     height: 50px;
     margin-bottom: 30px;
+    text-indent: 30px;
   }
   
   .Register h2{
