--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,14 +4,14 @@
     display: flex;
     align-items: center; 
     position: fixed;
+    justify-content: space-between;
     top: 0;
     width: 100%;
     z-index: 1; /*z-index sets the header above other elements*/
 }
 
 .titleBox{
-    width: 100%;
-    text-align: left;
+    width: 50%;
     display: flex;
     align-items: center;
 }
@@ -28,4 +28,11 @@ h1{
 .logo{
     height: 40px;
     margin: 20px;  
+}
+
+.username{
+    font-weight: 100;
+    font-size: x-large;
+    justify-content: right;
+    margin-right: 20px;
 }
