--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -8,6 +8,47 @@
     cursor: pointer;
     transition: background-color 0.2s;
   }
+
+  .tab {
+    color: black;
+    font-size: 1em;
+    width: 80%;
+    border: none;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 40px;
+    border-radius: 10px;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  .tab2 {
+    color: black;
+    font-size: 1em;
+    width: 80%;
+    border: none;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+
+  .tab:hover {
+    background-color: #f6e8ff;
+  }
+
+  .tab2:hover {
+    background-color: #f6e8ff;
+  }
   
   .custom-button:hover {
     background-color: #ae239c;
