--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    height: 800px;
+    height: 100vh;
   }
   
   .Home-header {
@@ -29,8 +29,10 @@
   .dashbanner {
     margin-top: 60px;
     height: 100px;
-    background-color: #eeeeee;
+    background-color: #d3d3d3;
     width: 100%;
+    display: flex;
+    flex-shrink: 0;
   }
 
   .row {
@@ -41,11 +43,26 @@
   }
 
   .sidebar {
-    background-color: #c7c7c7;
+    background-color: #c7c7c773;
     height: 100%;
-    width: 15%;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
   
+  .balance {
+    height: 80%;
+    background-color: rgb(255, 255, 255);
+    width: 380px;
+    margin-top: 8px;
+    margin-left: 25px;
+    font-size: 12px;
+    text-align: left;
+    padding-left: 30px;
+  }
+
   h2{
     padding-top: 30px;
     padding-bottom: 30px;
