--- a/src/pages/dash-pages/Deposit.css
+++ b/src/pages/dash-pages/Deposit.css
@@ -51,3 +51,12 @@ h4{
   margin-bottom: 30px;
   text-indent: 30px;
 }
+
+.dropdown {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  width: 50.75%;
+  height: 55px;
+  margin-bottom: 30px;
+  text-indent: 30px;
+}
