--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    height: 100vh;
+    min-height: 100vh;
+    align-items: stretch
   }
   
   .Home-header {
@@ -38,13 +39,13 @@
   .row {
     display: flex;
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     justify-content: space-between;
   }
 
   .sidebar {
     background-color: #c7c7c773;
-    height: 100%;
+    min-height: 100%;
     width: 250px;
     display: flex;
     flex-direction: column;
@@ -57,10 +58,15 @@
     background-color: rgb(255, 255, 255);
     width: 380px;
     margin-top: 8px;
-    margin-left: 25px;
+    margin-left: 20px;
+    margin-right: 20px;
     font-size: 12px;
     text-align: left;
     padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   h2{
@@ -77,6 +83,15 @@
   @media (max-width: 684px) {
     h2 {
       font-size: 2.5em;
+    }
+    .balance h3 {
+      font-size: 20px;
+    }
+    .dropdown {
+      width: 20px;
+    }
+    .sidebar {
+      width: 200px;
     }
   }
 
