--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    
+    padding-bottom: 40px;
   }
   
   .Home-header {
@@ -18,7 +18,7 @@
     color: white;
   }
 
-  .long {
+    .Home .long {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     width: 60%;
@@ -46,8 +46,14 @@
   }
 
   @media (max-width: 684px) {
-    h2 {
+    .banner h2 {
       font-size: 2.5em;
+    }
+    .banner {
+      height: 230px;
+    }
+    .Home .long {
+      width: 80%;
     }
   }
 
