--- a/src/pages/Register.module.css
+++ b/src/pages/Register.module.css
@@ -18,7 +18,7 @@
     margin-right: 15%;
     margin-top: 2.5%;
     
-    height: 620px;
+    height: 640px;
     background-color: #ffffff;
     filter: drop-shadow(0px 5px 4px #979797);
 
@@ -72,4 +72,10 @@
     user-select: none;
     font-weight: 100;
     text-align: center;
+  }
+
+  @media (max-width: 684px) {
+    .banner {
+      height: 150px;
+    }
   }
